Fix flicker on load for popup preview without breaking theming when auto is selected

--- a/ext/css/popup-preview.css
+++ b/ext/css/popup-preview.css
@@ -26,7 +26,7 @@
     --animation-duration: 0s;
 
     --example-text-color: #333333;
-    --background-color: #f8f9fa;
+    --background-color: rgba(0, 0, 0, 0);
 }
 :root[data-loaded=true] {
     --animation-duration: 0.25s;
@@ -34,19 +34,12 @@
 
 :root[data-theme=dark] {
     --example-text-color: #d4d4d4;
-    --background-color: #1e1e1e;
+    --background-color: rgba(0, 0, 0, 0);
 }
 
 
 html {
-    /* This delay and animation prevents flickering when rendering the popup preview */
-    opacity: 0;
-    animation: fadein 0.5s forwards;
-    animation-delay: 0.25s;
     background-color: var(--background-color);
-}
-@keyframes fadein {
-    from { opacity: 0; } to { opacity: 1; }
 }
 html.dark {
     background-color: var(--background-color);
